NTR - Fix sw-field name if no v-model is used

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
@@ -5,7 +5,7 @@
 
         <!-- Label -->
         {% block sw_field_label %}
-            <label v-if="label" :for="name">
+            <label v-if="label" :for="id">
                 <slot name="label">{{ label }}</slot>
             </label>
         {% endblock %}
@@ -17,7 +17,7 @@
                 {% block sw_field_input_textarea %}
                     <textarea v-if="type === 'textarea'"
                               :id="id"
-                              :name="name"
+                              :name="displayName"
                               :placeholder="placeholder"
                               v-html="currentValue"
                               :disabled="disabled ? 'disabled' : false"
@@ -33,7 +33,7 @@
                     <div v-else-if="type === 'select' || type === 'combo'" class="sw-field__select" >
                         {% block sw_field_input_select_field %}
                             <select :id="id"
-                                    :name="name"
+                                    :name="displayName"
                                     :value="currentValue"
                                     :disabled="disabled ? 'disabled' : false"
                                     :class="{ 'is--placeholder': currentValue === null }"
@@ -82,8 +82,8 @@
                                         <div class="sw-field__radio-option" v-for="(option, index) in options">
                                             <div class="sw-field__radio-input">
                                                 <input type="radio"
-                                                       :name="name"
-                                                       :id="`${name}-${index}`"
+                                                       :name="displayName"
+                                                       :id="`${displayName}-${index}`"
                                                        :value="option.value"
                                                        :disabled="disabled ? 'disabled' : false"
                                                        :checked="currentValue === option.value ? 'checked' : false"
@@ -95,7 +95,7 @@
                                                 <div class="sw-field__radio-state"></div>
                                             </div>
 
-                                            <label :for="`${name}-${index}`">{{ option.label }}</label>
+                                            <label :for="`${displayName}-${index}`">{{ option.label }}</label>
                                         </div>
                                     </template>
                                 {% endblock %}
@@ -112,7 +112,7 @@
                         {% block sw_field_input_checkbox_input %}
                             <input type="checkbox"
                                    :id="id"
-                                   :name="name"
+                                   :name="displayName"
                                    :disabled="disabled ? 'disabled' : false"
                                    :checked="currentValue ? 'checked' : false"
                                    @input="onInput"
@@ -136,7 +136,7 @@
                         {% block sw_field_input_switch_input %}
                             <input type="checkbox"
                                    :id="id"
-                                   :name="name"
+                                   :name="displayName"
                                    :disabled="disabled ? 'disabled' : false"
                                    :checked="currentValue ? 'checked' : false"
                                    @input="onInput"
@@ -158,7 +158,7 @@
                     <input v-else-if="type === 'datetime' || type === 'datetime-local'"
                            type="datetime-local"
                            :id="id"
-                           :name="name"
+                           :name="displayName"
                            :value="currentValue"
                            :disabled="disabled ? 'disabled' : false"
                            @input="onInput"
@@ -173,7 +173,7 @@
                         {% block sw_field_input_password_input %}
                             <input :type="showPassword ? 'text' : 'password'"
                                    :id="id"
-                                   :name="name"
+                                   :name="displayName"
                                    :placeholder="placeholder"
                                    :value="currentValue"
                                    :disabled="disabled ? 'disabled' : false"
@@ -206,7 +206,7 @@
                            ref="textfield"
                            :type="type"
                            :id="id"
-                           :name="name"
+                           :name="displayName"
                            :placeholder="placeholder"
                            :value="currentValue"
                            :disabled="disabled ? 'disabled' : false"
@@ -242,7 +242,7 @@
         {% endblock %}
 
         {% block sw_field_help_text %}
-            <div class="sw-field__help" v-if="helpText" :for="name">
+            <div class="sw-field__help" v-if="helpText" :for="id">
                 <slot name="help-text">
                     {% block sw_field_slot_help_text %}
                         {{ helpText }}
