--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -162,6 +162,7 @@
 
     .sw-media-catalog__context-menu {
         font-size: @sw-media-catalog-default-font-size;
+        .truncate();
 
         .sw-icon {
             margin-right: 10px;
