--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -7,12 +7,19 @@
         height: 100%;
     }
 
+    .sw-media-index__content-container{
+        position: relative;
+        height: 100%;
+        width: 100%;
+    }
+
     .sw-media-index__content {
         padding-left: 20px;
         padding-top: 50px;
-        justify-self: stretch;
-        overflow-x: hidden;
         overflow-y: auto;
+        position: absolute;
+        height: 100%;
+        width: 100%;
     }
 
     .sw-media-index__divider {
