--- a/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.less
+++ b/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.less
@@ -8,7 +8,7 @@
     .sw-media-collapse__header {
         display: grid;
         grid-template-columns: auto 24px;
-
+        cursor: pointer;
         padding: 0px 25px 16px 25px;
         color: @color-quickinfo-header;
         border-bottom: 1px solid @color-quickinfo-collapse-divider;
