--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -14,7 +14,7 @@
     }
 
     .sw-media-quickinfo__collapse-content {
-        padding: 25px 25px 0 25px;
+        padding-top: 25px;
     }
 
     .sw-media-quickinfo__two-columns {
