--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -26,10 +26,10 @@
             <template slot="smart-bar-actions">
 
                 {% block sw_media_catalog_change %}
-                    <sw-context-button class="sw-media-catalog__change" :menuWidth="350" menuAlign="left">
+                    <sw-context-button class="sw-media-catalog__change" :disabled="changeableCatalogs.length === 0" :menuWidth="350" menuAlign="left">
                         {% block sw_media_catalog_change_button %}
                             <template slot="button">
-                                <button class="sw-media-catalog__change-button" @click="onContextMenuClick">
+                                <button class="sw-media-catalog__change-button">
                                     {% block sw_media_change_button_label %}
                                         <sw-icon name="folder-breadcums-dropdown" multicolor size="32"></sw-icon>
 
