NTR - UI fixes for multiple quickinfo

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
@@ -7,7 +7,7 @@
 .sw-media-quickinfo-multiple {
 
     .sw-media-quickinfo-multiple__collapse {
-        margin: 0 -25px;
+       padding-bottom: 25px;
     }
 
     .sw-media-quickinfo-multiple__collapse-streched {
@@ -15,7 +15,7 @@
     }
 
     .sw-media-quickinfo-multiple__collapse-content {
-        padding: 25px;
+        padding-top: 25px;
     }
 
     .sw-media-quickinfo-multiple__two-columns {
