--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -162,6 +162,12 @@
         -webkit-appearance: none;
         -moz-appearance: none;
 
+        &:invalid,
+        &:-moz-submit-invalid,
+        &:-moz-ui-invalid {
+            box-shadow: none;
+        };
+
         &:focus {
             border-color: @sw-field-color-focus;
             box-shadow: 0 0 4px lighten(@sw-field-color-focus, 30%);
@@ -215,10 +221,10 @@
         select {
             display: block;
             width: 100%;
-            height: 100%;
             padding: 8px 16px;
             font-size: @sw-field-font-size;
             font-family: @sw-field-font-family;
+            height: 45px;
             line-height: 27px;
             color: @sw-field-color-text;
             border-radius: @sw-field-border-radius;
@@ -229,9 +235,19 @@
             -moz-appearance: none;
             appearance: none;
 
+            option {
+                color: @sw-field-color-text;
+            }
+
             &.is--placeholder {
                 color: lighten(@sw-field-color-text, 25);
             }
+
+            &:invalid,
+            &:-moz-submit-invalid,
+            &:-moz-ui-invalid {
+                box-shadow: none;
+            };
 
             &:focus {
                 border-color: @sw-field-color-focus;
@@ -265,7 +281,7 @@
         }
 
         .sw-field__select-load-placeholder {
-            height: 40px;
+            height: 45px;
             border-radius: @sw-field-border-radius;
             border: 1px solid @sw-field-color-border;
             background: @sw-field-color-background;
