NEXT-381 - Fix glitching entries on menu animation

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
@@ -45,6 +45,7 @@
         transform: translateX(-50px);
         opacity: 0;
         display: inline-block;
+        white-space: nowrap;
     }
 
     &.is--expanded {
